--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div class="h-full bg-gradient-to-r from-blue-500 to-cyan-500 " id="root"></div>
+    <div class="bg-gradient-to-r from-blue-500 to-cyan-500 " id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
