--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
-    <div class="bg-gradient-to-r from-blue-500 to-cyan-500 " id="root"></div>
+  <body class="min-h-screen flex flex-col ">
+    <div class="bg-gradient-to-r from-blue-500 to-cyan-500 flex-1 overflow-auto" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
